fix cors config